--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.24.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
     "react-loader-spinner": "^4.0.0",
